assignCounters initialized, still some fixing and imporving to do