@@ -3,11 +3,12 @@ package ar.edu.itba.pod.client.counterReservation;
 import ar.edu.itba.pod.client.Action;
 
 import java.util.Collections;
+import java.util.List;
 
 public enum CounterActions {
     LIST_SECTORS("listSectors", new ListSectorsAction(Collections.emptyList())),
-    LIST_COUNTERS("listCounters", new ListCountersAction(Collections.emptyList()))/*,
-    ASSIGN_COUNTERS("assignCounters", ),
+    LIST_COUNTERS("listCounters", new ListCountersAction(List.of("sector","counterFrom","counterTo"))),
+    ASSIGN_COUNTERS("assignCounters", new AsignCountersAction(List.of("sector","flights","airline","counterCount")))/*,
     FREE_COUNTERS(),
     CHECKIN_COUNTERS(),
     LIST_PENDING_ASSIGNMENTS()*/;
